@@ -6,20 +6,16 @@ var CloudCmd, Util, DOM, $;
         
     function ConsoleProto(CloudCmd, Util, DOM){
         var Name    = 'Console',
-            Element,
             Key     = CloudCmd.Key,
             Images  = DOM.Images,
             Console = this;
             
         this.init                = function(pCallBack){
-            var lViewFunc = CloudCmd.View.show || CloudCmd.View;
-            
             Util.loadOnLoad([
                 Console.show,
                 load,
-                lViewFunc,
+                CloudCmd.View,
                 DOM.jqueryLoad,
-                DOM.socketLoad
             ]);
             
             DOM.Events.addKey(listener);
@@ -28,42 +24,31 @@ var CloudCmd, Util, DOM, $;
         };
         
         this.show                       = function(){
-            var jqconsole;
+            var lElement;
             
             Images.showLoad({top:true});
             
-            if (!Element) {
-                Element         = DOM.anyload({
-                    name        : 'div',
-                    className   : 'console'
-                });
-            
-                Console.jqconsole   = 
-                jqconsole           = $(Element).jqconsole('', '# ');
-                // Abort prompt on Ctrl+Z.
-                jqconsole.RegisterShortcut('Z', function() {
-                    jqconsole.AbortPrompt();
-                    handler();
-                });
-                
-                // Handle a command.
-                var handler = function(command) {
-                    if (command)
-                        CloudCmd.Socket.send(command);
-
-                    jqconsole.Prompt(true, handler);
-                };
-                
-                // Initiate the first prompt.
-                handler();
-            }
-            
-            CloudCmd.View.show(Element, function(){
-                var lEvent      = DOM.Events.create('mouseup'),
-                    lElement    = $('.jqconsole-prompt')[0];
-                
-                DOM.Events.dispatch(lEvent, lElement);
+            lElement    = DOM.anyload({
+                name        : 'div',
+                className   : 'console'
             });
+            
+            $(lElement).console({
+                promptLabel: '# ',
+                commandValidate : function(line){
+                    var lRet = line !== "";
+                    
+                    return lRet;
+                },
+                commandHandle   : function(line){
+                    return line;
+                },
+                autofocus       : true,
+                animateScroll   : false,
+                promptHistory   : true,
+            });
+            
+            CloudCmd.View.show(lElement);
         };
         
         
@@ -74,11 +59,10 @@ var CloudCmd, Util, DOM, $;
         function load(pCallBack){
             Util.time(Name + ' load');
         
-            var lDir    =  CloudCmd.LIBDIRCLIENT + 'terminal/jq-console/',
+            var lDir    =  CloudCmd.LIBDIRCLIENT + 'terminal/jquery-console/',
                 lFiles  = [
-                    lDir + 'jqconsole.js',
-                    lDir + 'jqconsole.css',
-                    CloudCmd.LIBDIRCLIENT + 'terminal/jquery-terminal/jquery-migrate-1.0.0.js'
+                    lDir + 'jquery.console.js',
+                    lDir + 'jquery.console.css'
                 ];
             
             DOM.anyLoadInParallel(lFiles, function(){
