@@ -170,7 +170,7 @@ var CloudCmd, Util, DOM;
                     
                     case Key.TRA:
                         DOM.Images.showLoad({top: true});
-                        Util.exec(CloudCmd.Terminal);
+                        Util.exec(CloudCmd.Console);
                         break;
                         
                     case Key.SPACE:
