@@ -1,5 +1,5 @@
 /* module make possible connectoin thrue socket.io on a client */
-var CloudCmd, Util, DOM, io;
+var CloudCmd, Util, DOM, jqconsole, io;
 (function(CloudCmd, Util, DOM){
     'use strict';
     
@@ -50,13 +50,23 @@ var CloudCmd, Util, DOM, io;
             });
         }
     });
-    
+        
     function outToTerminal(pMsg){
         var lResult, lTerm;
         
         Terminal   = getTerminal();
         if(Terminal)
             lTerm = Terminal.Term;
+        else {
+            var lEcho = function(pResult){
+                CloudCmd.Console.jqconsole.Write(pResult);
+            };
+            
+            lTerm = {
+                echo    : lEcho,
+                error   : lEcho
+            };
+        }
         
         if(lTerm){
             var lStdout,
